--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
 __pycache__/
-*.py[cod]
-
-*.log
-local_settings.py
 db.sqlite3
-db.sqlite3-journal
-
-celerybeat-schedule
-celerybeat.pid
 
 .env
 .venv
 env/
 venv/
 ENV/
+
+node_modules
+.parcel-cache
+tcc_front
+/static
