--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@alpinejs/mask": "^3.12.0",
+    "alpinejs": "^3.12.0",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.14",
     "boxicons": "^2.1.4",
