--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@alpinejs/mask": "^3.12.0",
+    "@tailwindcss/forms": "^0.5.3",
     "alpinejs": "^3.12.0",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.14",
