--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "boxicons": "^2.1.4",
     "parcel": "^2.8.3",
     "postcss": "^8.4.23",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
     "tippy.js": "^6.3.7"
   },
