--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "core/static/core/css/dashboard.css",
         "core/static/core/css/boletim.css",
         "core/static/core/css/profile.css",
-        "core/static/core/css/schedule.css"
+        "core/static/core/css/schedule.css",
+        "core/static/core/css/alert.css"
       ],
       "distDir": "./static/core/dist"
     }
