--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build .",
     "watch": "parcel watch"
   },
   "keywords": [],
@@ -31,7 +32,6 @@
     "alpinejs": "^3.12.0",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.14",
-    "boxicons": "^2.1.4",
     "parcel": "^2.8.3",
     "postcss": "^8.4.23",
     "prettier-plugin-tailwindcss": "^0.3.0",
