--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,3 @@
 FROM nginx:stable-alpine
-COPY nginx.conf /etc/nginx
-COPY nginx.conf /etc/nginx/conf.d
+COPY default.conf /etc/nginx/conf.d
 EXPOSE 80
