--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,11 +1,31 @@
 version: '3.8'
 
 services:
-  app:
-    build:
-      context: .
+  web:
+    build: walrus01/gunicorn:linux
+    restart: always
+    volumes:
+      - static:/app/static
+    expose:
+      - "8000"
+    networks:
+      - django-network
+
+  nginx:
+    build: nginx
+    restart: always
+    volumes:
+      - static:/app/static
     ports:
-      - "80:8080"
-    command: "/app/entrypoint.sh"
-    env_file:
-      - .env
+      - "80:80"
+    depends_on:
+      - web
+    networks:
+      - django-network
+
+networks:
+  django-network:
+    name: django-network
+
+volumes:
+  static:
